--- a/Z_todo/Exo_15-10-2025.md
+++ b/Z_todo/Exo_15-10-2025.md
@@ -1,3 +1,44 @@
 ## Demande client :
 
-Besoin de pourvoir lister les cheveaux appartenant au utilisateur.
+Besoin de pourvoir lister les "FILES" utiliser par les users
+les champs utilies sont :
+nom-> string
+format-> string
+lien-> string
+
+
+les format seront (mettre variable en global utilisable dans tout le projet):
+- document
+- image
+- video
+- audio
+
+creer la vue index avec un tableau qui groupe les files par user
+----------------------
+|user|files|nouvelle files|
+|---|---|---
+| user 1 | cv(doc - 12/06/2025)  |forms new
+|       | photo(img - 12/06/2025)     |
+|       | CI(pdf - 12/06/2025)        |
+| user 2 | nom(format - date.updated_at) |forms new
+|       | nom(format - date.updated_at) |
+|       | nom(format - date.updated_at)|
+
+----------------------
+
+- faire migration correct avec structure comprensible(2)
+- faire controleur et model (1)
+- faire vue index (1)
+## Besoin spécifique.
+- Automatiquement avoir les trois fichiers cv/phto/CI sur chaque user pour les nouveau user et les anciens (2)
+- Rajouter un bouton pour pouvoir facilement dupliquer le **dernier** fichier reprendre le nom -> nom-2 (2)
+- Pourvoir modifier le chemin / nom / type  facilement dans la vue index en le moins de clique. (2)
+- avoir un bouton pour supprimer le fichier(1)
+- ne pas avoir des vue edit ni new, mais que des render dans la vue index pour garder le code le plus propre possible. (1)
+- penser aux logiques dans le model pour eviter erreures (1)
+
+- avoir une vue propre et ergonomique (1)
+- code propre et leger (1)
+
+
+- finir le form dans le form du projet (5)
